# Remaster

./: .gitignore  AGENTS.md  ARCHITECTURE_V2.md  CLAUDE.md  CLAUDE_CODE.md  README.md  Remaster.sln  SKILL.md  run.ps1
AudioPipeline.Shared/: AudioPipeline.Shared.csproj
AudioPipeline.Shared/DTOs/: FeedbackDto.cs  KnowledgeBookDto.cs  MixSessionDto.cs  ProgressDto.cs  SkillProfileDto.cs
AudioPipeline.Shared/Data/: AudioPipelineContext.cs
AudioPipeline.Shared/Models/: BookChunk.cs  KnowledgeBook.cs  KnowledgeRule.cs  LearnedRule.cs  MasteringPlan.cs  MixSession.cs  ProcessingIteration.cs  SimilarityReport.cs  SkillProfile.cs  TrackDiagnosis.cs  UserFeedback.cs  VoiceModel.cs
AudioPipeline.UI/: AudioPipeline.UI.csproj  Program.cs  appsettings.json
AudioPipeline.UI/..publishdotnet/: AudioPipeline.UI.deps.json  AudioPipeline.UI.staticwebassets.endpoints.json  appsettings.json  web.config
AudioPipeline.UI/Agents/: AnalysisAgent.cs  IAgent.cs  KnowledgeAgent.cs  MasterAgent.cs  MasteringAgent.cs  MidiAgent.cs  MixAgent.cs  MixPlan.cs  PipelineContext.cs  PlanAgent.cs  RvcAgent.cs  StemsAgent.cs  VstAgent.cs
AudioPipeline.UI/Components/: App.razor  AudioPlayer.razor  BlockSelector.razor  FeedbackTags.razor  LearnedRulesPanel.razor  ProgressLog.razor  StarRating.razor  _Imports.razor
AudioPipeline.UI/Hubs/: ProgressHub.cs
AudioPipeline.UI/Properties/: launchSettings.json
installer/: AppFiles.wxs  AudioPipeline.wixproj  Launch.bat  License.rtf  Product.wxs  SvcFiles.wxs  build_installer.ps1  generate_components.ps1  setup_python.bat
services/cpp_vst/: CMakeLists.txt  RestServer.cpp  VstHost.cpp  VstHost.h  stub_server.py
sql/: 01_database.sql  02_v2_migration.sql
(+40 files in other folders)
